--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Date: 07/04/2021 -->
   <div class="column2">
     <h2> Palace Gardens</h2>
     <img src="gardens.jpg" alt="gardens">
-    <p> The Theed Royal Garden is one of the most beautiful places in the Galaxy!</p>
+    <p> The Theed Royal Garden is one of the most beautiful gardens in the Galaxy!</p>
   </div>
   <div class="column3">
     <h2> Royal Library</h2>
@@ -61,7 +61,7 @@ Date: 07/04/2021 -->
 
 <footer>Responsive Travel Agency&#169;
   Phone: <a href="tel:+15555555555">(555) 555-5555</a>
-  E-mail: <a href=example@example.com>responsivetravel@example.com</a>
+  E-mail: <a href=example@example.com>responsivetravel@exampleemails.com</a>
 
 </footer>
 
